# claude_usage_widget

./: .gitignore  LICENSE  README.md  index.html  package.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  oauth.rs  usage.rs  watcher.rs
src/components/: AboutPanel.tsx  LlamaWalker.tsx  SettingsPanel.tsx  StatusLine.tsx  UsageBar.tsx
src/hooks/: useCountdown.ts  useUsage.ts
src/styles/: globals.css
