[package]
name = "claude-usage-widget"
version = "0.1.0"
description = "Claude Code usage widget for Windows"
authors = []
edition = "2021"

[lib]
name = "claude_usage_widget_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
notify = "6"
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png"] }
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
